Fixed Spacing on Dashboard

--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -13,6 +13,7 @@ body
     height: calc(100vh - 80px)
     justify-content: center
     align-items: center
+    max-width: 100%
 .card
     width: 50vh
     aspect-ratio: 1
